# Advanced-c-projects

C_Course/: CMakeCache.txt  CMakeLists.txt  Makefile  Myproject  Myproject-debug  README.md  cmake_install.cmake
C_Course/Advanced-c-projects/: CMakeLists.txt  Makefile  cmake_install.cmake  lib.c  lib.h
C_Course/Test/: CMakeLists.txt  Makefile  cmake_install.cmake  test.c
C_Course/app/: app  app_d  part4test_d  source.c
